--- a/sections/definitions.tex
+++ b/sections/definitions.tex
@@ -201,9 +201,7 @@ Hvis \(f: \Omega \subset \R^d \to \overline{\R}\) er nedre semi-kontinuerlig og 
         \]
 \end{enumerate}
 
-\clearpage
-
-\section{Formeltabell}
+\chapter{Formeltabell}
 
 \begin{table}[ht]
   \centering
