--- a/sections/functions.tex
+++ b/sections/functions.tex
@@ -2,8 +2,7 @@
 \chapter{Funksjonsegenskaper og Optimeringsmetoder}
 \begin{table}[ht]
   \centering
-  \caption{Function Properties and Optimization Methods (Corrected)}
-  \label{tab:function_properties}
+  \caption{Function Properties and Optimization Methods}
   \footnotesize
   \begin{tabularx}{\textwidth}{@{} >{\RaggedRight}Z Y Y Y Y Y Y Y @{}}
     \toprule
@@ -39,6 +38,7 @@
     \( f(x,y) = x^4y^2 + x^4 - 2x^3y \)                                               & \no          & \yes         & \yes         & \no           & \yes         & \yes         & Evolutionary         \\
     \bottomrule
   \end{tabularx}
+  \label{tab:function_properties}
   \vspace{0.5em}
   \footnotesize
   \textbf{Key Corrections:}
