--- a/sections/lectures.tex
+++ b/sections/lectures.tex
@@ -153,7 +153,7 @@
 \section{Lecture 3 (13. January 2025)}
 \subsection*{Optimization Algorithms}
 
-\begin{definition}{Nelder-Mead Algorithm}{nelder-mead}
+\begin{definition}{Nelder-Mead Algorithm}{nelder_mead}
   The Nelder-Mead algorithm is a heuristic search method used for minimizing an objective function without the need for derivatives. It operates on a simplex of \( n+1 \) points in \( \R^n \) and iteratively reflects, expands, contracts, or shrinks the simplex to converge to a local minimum.
 
 \end{definition}
